[tool.poetry]
name = "gpt3-exp"
version = "0.1.0"
description = ""
authors = ["Prathamesh Sarang <prathamesh@difference-engine.ai>"]

[tool.black]
line-length = 90
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.__pycache__
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.6"
alembic = "^1.4.2"
sqlalchemy = "^1.3.18"
streamlit = "^0.65"
openai = "^0.2.4"
openai-finetune = "^0.0.1-rc.9"
requests = "^2.24.0"
loguru = "^0.5.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[tool.poetry.scripts]
st-server = "scripts:st_server"
migrate = "scripts:migrations"
test_script = "scripts:test_script"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
